--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -82,12 +82,12 @@
     <Compile Include="Code\Bots\Screenshoter.cs" />
     <Compile Include="Code\Bots\TetrisBot.cs" />
     <Compile Include="Code\Bots\WindowHandling.cs" />
+    <Compile Include="Code\Configuration\FileBackedConfiguration.cs" />
+    <Compile Include="Code\Configuration\IConfiguration.cs" />
+    <Compile Include="Code\Configuration\MemoryBackedConfiguration.cs" />
     <Compile Include="Code\EventDispatcher.cs" />
-    <Compile Include="Code\FileBackedConfiguration.cs" />
     <Compile Include="Code\HexUtils.cs" />
-    <Compile Include="Code\IConfiguration.cs" />
     <Compile Include="Code\IEventListener.cs" />
-    <Compile Include="Code\MemoryBackedConfiguration.cs" />
     <Compile Include="Code\ProxyCmdExecutors\ProxyCmdExecutorWMIC.cs" />
     <Compile Include="Code\ReflectionUtils.cs" />
     <Compile Include="Code\TextCoders\TextCoderBase64Utf8.cs" />
