--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="VAR.Toolbox">
+      <HintPath>bin\Debug\VAR.Toolbox.exe</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\VAR.HttpServer\VAR.HttpServer\HttpProcessor.cs">
@@ -83,6 +86,7 @@
     <Compile Include="Code\Configuration\IConfiguration.cs" />
     <Compile Include="Code\Configuration\MemoryBackedConfiguration.cs" />
     <Compile Include="Code\EventDispatcher.cs" />
+    <Compile Include="Code\GlobalKeyboardHook.cs" />
     <Compile Include="Code\HexUtils.cs" />
     <Compile Include="Code\IEventListener.cs" />
     <Compile Include="Code\ProxyCmdExecutors\ProxyCmdExecutorWMIC.cs" />
@@ -245,6 +249,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Tools\FrmVirtualMouse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Tools\FrmVirtualMouse.Designer.cs">
+      <DependentUpon>FrmVirtualMouse.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Tools\FrmWebcam.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -312,6 +322,11 @@
     <Content Include="Images\Toolbox.png" />
     <Content Include="Images\toolbox.svg" />
     <Content Include="Toolbox.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Tools\FrmVirtualMouse.resx">
+      <DependentUpon>FrmVirtualMouse.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
